--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -2,4 +2,4 @@ FILE(GLOB sources *.cpp)
 LINK_DIRECTORIES(${XCOM_LIBRARY_DIR})
 LINK_LIBRARIES(xcom)
 ADD_EXECUTABLE(xcomidl ${sources})
-INSTALL(TARGETS xcomidl RUNTIME DESTINATION /bin)
+INSTALL(TARGETS xcomidl RUNTIME DESTINATION bin)
