--- a/src/components/parser/CMakeLists.txt
+++ b/src/components/parser/CMakeLists.txt
@@ -1,4 +1,8 @@
 FILE(GLOB sources *.cpp)
+LINK_LIBRARIES(xcom)
+if (WIN32)
+  LINK_LIBRARIES(Rpcrt4 Shlwapi)
+endif()
 ADD_LIBRARY(xcomidl_parser SHARED ${sources})
 SET_TARGET_PROPERTIES(xcomidl_parser PROPERTIES PREFIX "")
-INSTALL(TARGETS xcomidl_parser LIBRARY DESTINATION lib)
+#INSTALL(TARGETS xcomidl_parser LIBRARY DESTINATION lib)
